--- a/curriculo/package.json
+++ b/curriculo/package.json
@@ -22,5 +22,8 @@
     "@vitejs/plugin-react": "^4.3.1",
     "typescript": "^5.4.5",
     "vite": "^5.3.1"
+  },
+  "engines": {
+    "node": "18"
   }
 }
