--- a/curriculo/package.json
+++ b/curriculo/package.json
@@ -20,6 +20,7 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
+    "patch-package": "^8.0.0",
     "typescript": "^5.4.5",
     "vite": "^5.3.1"
   },
