--- a/curriculo/package.json
+++ b/curriculo/package.json
@@ -11,9 +11,9 @@
   "dependencies": {
     "@google/genai": "^0.14.0",
     "@netlify/functions": "^2.6.0",
+    "mercadopago": "^2.0.10",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "stripe": "^15.8.0"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@types/node": "^20.12.12",
