--- a/curriculo/package.json
+++ b/curriculo/package.json
@@ -12,6 +12,7 @@
     "@google/genai": "^0.14.0",
     "@netlify/functions": "^2.6.0",
     "mercadopago": "^2.0.10",
+    "stripe": "^16.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
