--- a/curriculo/netlify/functions/package.json
+++ b/curriculo/netlify/functions/package.json
@@ -1,8 +1,7 @@
-"include": [
-    "App.tsx",
-    "index.tsx",
-    "types.ts",
-    "components/**/*.tsx",
-    "services/**/*.ts",
-    "vite.config.ts"
-  ],
+{
+  "type": "commonjs",
+  "dependencies": {
+    "node-fetch": "^2.7.0",
+    "mercadopago": "^2.0.10"
+  }
+}
