--- a/curriculo/tsconfig.json
+++ b/curriculo/tsconfig.json
@@ -37,7 +37,7 @@
   "exclude": [
     "node_modules",
     "dist",
-    "netlify/functions"  // <-- Adicione esta linha
+    "netlify/functions"
   ],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
