--- a/curriculo/netlify/functions/package.json
+++ b/curriculo/netlify/functions/package.json
@@ -1,7 +1,7 @@
 {
-  "type": "commonjs",
+  "type": "module",
   "dependencies": {
-    "node-fetch": "^2.7.0",
+    "node-fetch": "^3.3.2",
     "mercadopago": "^2.0.10"
   }
 }
